# claude-universal

./: .gitignore  README.md  pyproject.toml
.thesun/: publish-history.md
claude_universal/: __init__.py  __main__.py  config.py  launcher.py  mcp_setup.py  proxy.py  wizard.py
claude_universal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_proxy.py
