[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-azure"
version = "0.1.0"
description = "Use Claude Code with Azure OpenAI - no Anthropic subscription required"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Tim Schwarz", email = "tim@example.com"}
]
keywords = ["claude", "ai", "azure", "openai", "ollama", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-azure = "claude_universal.__main__:main"

[project.urls]
Homepage = "https://github.com/schwarztim/claude-azure"
Repository = "https://github.com/schwarztim/claude-azure"
Issues = "https://github.com/schwarztim/claude-azure/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_universal*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
